added more style

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
               />
-              <p>Marcus</p>
+              <p class="profile-name">Marcus</p>
               <a
                 class="dropdown-toggle d-flex align-items-center hidden-arrow"
                 href="#"
