added one checked box

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <div class="weekdays" id="weekdays">
                  
               <div class="form-check ">
-                <input class="form-check-input" type="checkbox" name="flexCheckDefault"/>
+                <input class="form-check-input" type="checkbox" name="flexCheckDefault" checked/>
                 <label class="form-check-label">Sunday</label>
               </div>
               <div class="form-check ">
@@ -323,7 +323,7 @@
             <div class="weekdays" id="weekdays">
                  
               <div class="form-check ">
-                <input class="form-check-input" type="checkbox" name="flexCheckDefault"/>
+                <input class="form-check-input" type="checkbox" name="flexCheckDefault" checked/>
                 <label class="form-check-label">Sunday</label>
               </div>
               <div class="form-check ">
